05-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: aitask-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: vanshsuri07/ai-task-worker:683f0d8
          imagePullPolicy: Always
