04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: aitask-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: vanshsuri07/ai-task-backend:683f0d8
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: aitask-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
